add swagger api stubs
